--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,15 @@
 @import "tailwindcss";
 
-/* :root {
+/* Tailwind default theme + CSS variables */
+:root {
   --background: #ffffff;
   --foreground: #171717;
-} */
+}
+
+.dark {
+  --background: #0a0a0a;
+  --foreground: #ededed;
+}
 
 @theme inline {
   --color-background: var(--background);
@@ -12,15 +18,8 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  /* background: var(--background); */
-  /* color: var(--foreground); */
+  background: var(--background);
+  color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
